@@ -1,4 +1,6 @@
 === 1.2.0 (TBD)
+* Add RJack::TarPit::BaseStrategy.test_line_match for common
+  version, etc. file checks. See example usage in this gem's Rakefile.
 
 === 1.1.0 (2009-12-19)
 * Add :rdoc_diagram option to use Graphviz dot --diagram with rdoc.
